--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/ezege
+spring.datasource.username=postgres
+spring.datasource.password=THsF*3858
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
