--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ezege
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:h2:file:C:\\Users\\suple\\Desktop\\ezege-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
 spring.datasource.password=THsF*3858
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
