--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:C:\\Users\\suple\\Desktop\\MatrixSystem.db
+spring.datasource.url=jdbc:h2:file:./db/MatrixSystem.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=THsF*3858
@@ -6,4 +6,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
