--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>MatrixSystem</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>MatrixSystem</name>
+
     <description>MatrixSystem</description>
     <properties>
         <java.version>17</java.version>
@@ -65,6 +66,7 @@
     </dependencies>
 
     <build>
+        <finalName>matrix-system</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
