--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+#spring.sql.init.mode=never
